[package]
name = "rustcarnum"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/*",
    "tools/*"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.16.0"

[dependencies]
bevy = { workspace = true }
bevy_art = { path = "crates/bevy_art" }
bevy_mes = { path = "crates/bevy_mes" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
